--- a/src/scss/components/_Form.scss
+++ b/src/scss/components/_Form.scss
@@ -3,12 +3,13 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 320px;
+  width: 50vw;
   background: whitesmoke;
-  box-shadow: 0 0 500px lighten(deepskyblue, 25%), 0 0 25px white;
-  border: 2px solid #333;
-  border-radius: 4px;
+  // box-shadow: 0 0 500px lighten(deepskyblue, 25%), 0 0 25px white;
+  // border: 2px solid #333;
+  border-radius: 10px;
   margin: auto;
+  padding-top: 1em;
   .input {
     padding: 20px;
     font-size: 24px;
@@ -44,7 +45,7 @@
     button {
       cursor: pointer;
       padding: 10px 20px;
-      border: 2px solid black;
+      // border: 2px solid black;
       border-radius: 10px;
       transition: 0.3s;
       &:hover {
@@ -55,12 +56,12 @@
       }
       &.check {
         color: white;
-        background: linear-gradient(green, darken(green, 20%));
+        background: #a57ccb;
       }
       &.skip {
         color: white;
-        text-shadow: 1px 2px 3px black;
-        background: linear-gradient(red, black);
+        // text-shadow: 1px 2px 3px black;
+        background: #e96d6d;
       }
       &:disabled {
         opacity: 0.8;
