--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1,6 +1,5 @@
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   border: 0;
   margin: 0;
   padding: 0;
@@ -20,112 +19,77 @@ input {
   width: 100%;
 }
 
-body {
-  background: black;
-}
-
 .App {
   font-size: 20px;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
-
 .App .Form {
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 320px;
+  transform: translate(-50%, -50%);
+  width: 50vw;
   background: whitesmoke;
-  -webkit-box-shadow: 0 0 500px #80dfff, 0 0 25px white;
-          box-shadow: 0 0 500px #80dfff, 0 0 25px white;
-  border: 2px solid #333;
-  border-radius: 4px;
+  border-radius: 10px;
   margin: auto;
+  padding-top: 1em;
 }
-
 .App .Form .input {
   padding: 20px;
   font-size: 24px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .App .Form .input input {
   text-transform: lowercase;
   border: 2px solid lightgrey;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
-
 .App .Form .input input:hover, .App .Form .input input:focus {
   border-radius: 4px;
   border-color: #333;
 }
-
 .App .Form .input input:focus {
   outline: none;
 }
-
 .App .Form .input input.error {
   border-color: #ff4d4d;
   background: #ff8080;
 }
-
 .App .Form .input input,
 .App .Form .input span {
   display: inline-block;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
   text-align: center;
 }
-
 .App .Form .buttons {
   padding: 20px 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
-
 .App .Form .buttons button {
   cursor: pointer;
   padding: 10px 20px;
-  border: 2px solid black;
   border-radius: 10px;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
-
 .App .Form .buttons button:hover {
   border-radius: 20px;
 }
-
 .App .Form .buttons button:focus {
   outline: none;
 }
-
 .App .Form .buttons button.check {
   color: white;
-  background: -webkit-gradient(linear, left top, left bottom, from(green), to(#001a00));
-  background: linear-gradient(green, #001a00);
+  background: #a57ccb;
 }
-
 .App .Form .buttons button.skip {
   color: white;
-  text-shadow: 1px 2px 3px black;
-  background: -webkit-gradient(linear, left top, left bottom, from(red), to(black));
-  background: linear-gradient(red, black);
+  background: #e96d6d;
 }
-
 .App .Form .buttons button:disabled {
   opacity: 0.8;
   border-radius: 10px;
 }
-
 .App .Help .content {
   position: fixed;
   top: 0;
@@ -138,25 +102,18 @@ body {
   border: 1px solid white;
   background: grey;
   z-index: 1;
-  -webkit-transition: 1s;
   transition: 1s;
-  -webkit-transform: translate(0, -125%);
-          transform: translate(0, -125%);
+  transform: translate(0, -125%);
 }
-
 .App .Help .content p {
   padding-bottom: 10px;
 }
-
 .App .Help .content p:last-of-type {
   padding-bottom: 0;
 }
-
 .App .Help .content.active {
-  -webkit-transform: translate(0%);
-          transform: translate(0%);
+  transform: translate(0%);
 }
-
 .App .Help .content .close {
   cursor: pointer;
   color: black;
@@ -166,15 +123,11 @@ body {
   padding: 10px;
   font-weight: bold;
   width: 36px;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
-
 .App .Help .content .close:hover {
-  -webkit-transform: scale(1.5);
-          transform: scale(1.5);
+  transform: scale(1.5);
 }
-
 .App .Help .question-mark {
   position: fixed;
   bottom: 0;
@@ -185,25 +138,21 @@ body {
   background: white;
   border: 2px solid white;
   border-radius: 50%;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
-
 @media (max-width: 640px) {
   .App .Help .question-mark {
     width: 48px;
   }
 }
-
 @media (max-height: 640px) {
   .App .Help .question-mark {
     width: 48px;
   }
 }
-
 .App .Help .question-mark:hover, .App .Help .question-mark.active {
-  -webkit-box-shadow: 1px 2px 15px deepskyblue;
-          box-shadow: 1px 2px 15px deepskyblue;
-  -webkit-transform: rotate(15deg);
-          transform: rotate(15deg);
+  box-shadow: 1px 2px 15px deepskyblue;
+  transform: rotate(15deg);
 }
+
+/*# sourceMappingURL=main.css.map */
